# blood-tests-extractor

./: .gitignore  README.md  pyproject.toml
examples/output_templates/: tables.html.jinja
src/blood_tests_extractor/: __main__.py  analysis.py  analysis_cell.py  analysis_table.py  extractor.py  parser.py
src/command_line/: __main__.py  debugging_table.py
src/extract_table/: __main__.py  analysis_table.py
src/http_api/: analysis_view_model.py  main.py
tests/: test_analysis.py  test_analysis_cell.py  test_analysis_table.py
tests/blood_tests_extractor/: test_analysis.py
tests/command_line/: test_main.py
tests/http_api/: test_analysis_view_model.py  test_main.py
