[project]
name = "blood-tests-extractor"
version = "0.1.0"
description = "It extracts tables containing blood test results from PDF or image files"
authors = [
    {name = "Roberto Zanon"}
]
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.13,<3.14"
dependencies = [
    "img2table (>=1.4.1,<2.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
]

[tool.poetry.group.development]
optional = true

[tool.poetry.group.development.dependencies]
Jinja2 = ">=3.1.6,<4.0.0"
coverage = ">=7.8.0,<8.0.0"
httpx = ">=0.28.1,<0.29.0"
black = ">=25.1.0,<26.0.0"
lxml = ">=5.3.1,<6.0.0"


[tool.poetry]
packages = [{include = "blood_tests_extractor", from = "src"}]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
omit = ["config.py", "config-3.py"]
source = ["src"]